fix the implementation of movie details collapse mechanism

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,12 @@ body {
 .movie p {
   font-size: 18px;
 }
+
+.movie-details {
+  height: 0;
+  overflow: hidden;
+}
+
+.movie.is-active .movie-details {
+  height: auto;
+}
